brat/test/golden/error/unmatched_bracket.brat.golden
Error in test/golden/error/unmatched_bracket.brat@FC {start = Pos {line = 1, col = 17}, end = Pos {line = 1, col = 19}}:
f(n, Vec([], n) -> Vec([], n) -- First bracket never closed
                ^^

  Parse error unexpected -> 
expecting (...), ), ,-, -,, =%=, =,, or =,=


